--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,6 +13,8 @@
 
 :root {
   --clr-light: hsla(0, 0%, 100%, 0.55);
+  --clr-yellow: linear-gradient(270deg, #ffb800 30.35%, #d9e021 103.7%);
+  --pad-2: 1em 2em;
 }
 
 .clr-light {
