--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -7,6 +7,20 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.4);
   }
+}
+
+@mixin hoverMq {
+  @media (hover: hover) and (pointer: fine) {
+    @content;
+  }
+}
+
+@mixin activeTab {
+  color: #d9e021;
+  background: var(--clr-yellow);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
