--- a/src/assets/scss/components/temp-panel.scss
+++ b/src/assets/scss/components/temp-panel.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0.5em 0.5em 3em 0.5em;
+  padding: 1em;
 }
 
 .temp-header {
