--- a/src/assets/scss/components/temp-panel.scss
+++ b/src/assets/scss/components/temp-panel.scss
@@ -14,7 +14,26 @@
   margin-block: 0.15em;
 
   h2 {
-    font-size: 4rem;
+    font-size: 5rem;
+  }
+}
+
+.temp-condition  {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    width: 75px;
+    height: auto;
+  }
+
+  p {
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: 300;
+    transform: translateY(-0.5em);
   }
 }
 
