--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -26,7 +26,7 @@ body {
   background-image: url("../images/rainy-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   min-height: 100vh;
   font-family: "Poppins", sans-serif;
   color: white;
