--- a/src/assets/scss/components/footer-nav.scss
+++ b/src/assets/scss/components/footer-nav.scss
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     gap: 5px;
+    user-select: none;
 
     .brand-logo {
       width: 35px;
