--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,7 @@
   --clr-light: hsla(0, 0%, 100%, 0.55);
   --clr-yellow: linear-gradient(270deg, #ffb800 30.35%, #d9e021 103.7%);
   --pad-2: 1em 2em;
+  --clr-modal: hsl(0, 0%, 20%);
 }
 
 .clr-light {
