--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin darkOverlay {
   &::before {
     content: "";
-    position: absolute;
+    position: fixed;
     z-index: -1;
     top: 0;
     left: 0;
