--- a/src/assets/scss/components/details-panel.scss
+++ b/src/assets/scss/components/details-panel.scss
@@ -77,6 +77,43 @@
   }
 }
 
+.forecast-day {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: hsla(0, 0%, 95%, 0.1);
+  box-shadow: 0px 0px 3px 1px hsla(0, 0%, 35%, 0.2);
+  border-radius: 15px;
+  padding: 1em 0.75em;
+
+  .date,
+  .condition,
+  .wind,
+  .temps {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .temps {
+    font-size: 1.1rem;
+    justify-content: space-between;
+    gap: 0.5em;
+  }
+
+  .date {
+    p:first-of-type {
+      color: var(--clr-light);
+    }
+
+    p:nth-of-type(2) {
+      font-size: 1.2rem;
+      letter-spacing: 2px;
+    }
+  }
+}
+
 .weather-details {
   padding-bottom: 1.5em;
   border-bottom: 1px solid hsla(0, 0%, 100%, 0.25);
