--- a/src/assets/scss/components/details-panel.scss
+++ b/src/assets/scss/components/details-panel.scss
@@ -85,6 +85,7 @@
   box-shadow: 0px 0px 3px 1px hsla(0, 0%, 35%, 0.2);
   border-radius: 15px;
   padding: 1em 0.75em;
+  font-size: clamp(0.8rem, 1vw, 1.1rem);
 
   .center {
     display: flex;
@@ -99,6 +100,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .wind img {
+    width: clamp(20px, 18px + 2vw, 35px);
+  }
+
+  .condition img {
+    width: clamp(30px, 25px + 2vw, 35px);
   }
 
   .wind {
