--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -43,7 +43,7 @@ main {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 @media (min-width: 948px) {
